added reactjs to stack

--- a/AdminLTE/src/AdminLTE/bower.json
+++ b/AdminLTE/src/AdminLTE/bower.json
@@ -11,6 +11,7 @@
     "bootstrap-timepicker": "*",
     "chartjs": "*",
     "colorpicker": "*",
+    "react": "*",
     "flot": "*",
     "iCheck": "*",
     "daterangepicker": "*",
