Updated private master page after login, added more plugins

--- a/AdminLTE/src/AdminLTE/bower.json
+++ b/AdminLTE/src/AdminLTE/bower.json
@@ -13,10 +13,12 @@
     "colorpicker": "*",
     "react": "*",
     "flot": "*",
+    "fastclick": "*",
     "iCheck": "*",
     "daterangepicker": "*",
     "fullcalendar": "*",
     "jquery.inputmask": "*",
+    "jquery-slimscroll": "*",
     "ckeditor": "*",
     "hammer.js": "*",
     "ionicons": "*",
