adding reactjs components

--- a/AdminLTE/src/AdminLTE/bower.json
+++ b/AdminLTE/src/AdminLTE/bower.json
@@ -12,6 +12,7 @@
     "chartjs": "*",
     "colorpicker": "*",
     "react": "*",
+    "react-router": "*",
     "flot": "*",
     "fastclick": "*",
     "iCheck": "*",
